# zrive-ds-4q23-olive

./: .gitignore  README.md  pyproject.toml
documents/: Climate_Data_Documentation.md  limate_Data_Documentation.md
notebooks/: Crear_Dataset_Parcelas.md  EDA_Diferencia_Coordenadas.ipynb  EDA_estados_fenologicos.ipynb  EDA_estados_fenologicos.md  EDA_preprocessing_binary.ipynb  EDA_preprocessing_numeric.ipynb  EDA_y_temporal.md  download_data.ipynb  eda_meteo.ipynb  initial_climate_data_eda.ipynb  initial_climate_data_eda.md  join_meteo.ipynb  reduce_n_parcelas.ipynb  subset_dataset.ipynb
src/: EDA parcelas.ipynb  EDA parcelas_filtered_y_30days_CATEGORICAL_VARIABLES_PREPROCESSING.ipynb  EDA_parcelas.md  EDA_parcelas_30days.md  EDA_parcelas_filtered_y_30days.ipynb  Final_Model_Metrics.ipynb  Initial_Training_Analysis.ipynb  catalogue.txt  catalogue_short.txt  cdsapi.ipynb  config_parcelas.py  download_NVDI_FAPAR.py  download_data.ipynb  download_other_meteo_variables.py  eda_meteo.ipynb  explore_carlos.ipynb  get_meteo_variables.py  huso_municipios.txt  municipios.txt  parcelas.txt  parcelas_30_days.txt  parcelas_download.txt  pre_processing.py  preprocessing_categorical.py  processing.py  reduce_n_parcelas.ipynb  sample_parcelas.txt  train.py  utils.py
src/EDA_Parcelas_Dataset/: Crear_Dataset_Parcelas.ipynb
src/EDA_Parcels/: Crear_Dataset_Parcelas.ipynb  EDA_estados_fenologicos.ipynb  EDA_y_temporal.ipynb
tests/: test_pre_processing.py
