[tool.poetry]
name = "zrive-ds"
version = "0.1.0"
description = "Project for the program Zrive Applied Data Science"
authors = ["Guille Barquero <gb@zriveapp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
numpy = "^1.25.2"
sklearn = "^0.0.post7"
requests = "^2.31.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
pytest = "^7.4.0"
xarray = "^2023.11.0"
pyarrow = "^14.0.1"
ipykernel = "^6.26.0"
jupyter = "^1.0.0"
packaging = "^23.2"
netcdf4 = "^1.6.5"
scipy = "^1.11.4"
h5netcdf = "^1.3.0"
bottleneck = "^1.3.7"
seaborn = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
